--- a/src/partials/choose-us.html
+++ b/src/partials/choose-us.html
@@ -1,5 +1,5 @@
-<section class="max-w-[1240px] w-full m-auto px-[20px] pb-[150px] flex flex-col gap-[90px]">
-  <h2 class="text-[54px] leading-[77px] text-center">Why Choose us? </h2>
+<section class="max-w-[1240px] w-full m-auto px-[20px] pb-[150px] flex flex-col gap-[60px] lg:gap-[90px]">
+  <h2 class="text-[36px] sm:text-[48px] lg:text-[54px] leading-[77px] text-center">Why Choose us? </h2>
   <div class="flex justify-around flex-wrap gap-[30px]">
     <div class="max-w-[360px] min-w-[300px] w-full px-[24px] py-[36px] border border-white-rgba-03 rounded-[14px] ">
       <div class="w-[100px] h-[100px] mb-[24px] rounded-full bg-white flex justify-center items-center">
