change introduce-yourself block

--- a/src/partials/introduce-yourself.html
+++ b/src/partials/introduce-yourself.html
@@ -3,7 +3,7 @@
     <h2 class="text-[36px] sm:text-[48px] lg:text-[54px]">Let’s Introduce
       Ourself</h2>
   </div>
-  <div class="hidden h-full w-[2px] bg-white-rgba-03 absolute left-[50%] top-0 bottom-0 lg:block"></div>
+  <!-- <div class="hidden h-full w-[2px] bg-white-rgba-03 absolute left-[50%] top-0 bottom-0 lg:block"></div> -->
   <div class="flex-1">
     <h3 class="text-[32px] mb-[20px] ">Criminal Lawyer</h3>
     <p class="text-[18px]">Amet minim mollit non deserunt ullamco est
